--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,6 @@ version '0.1-SNAPSHOT'
 repositories {
     mavenCentral()
     maven { url = "https://maven.fabricmc.net" }
-    maven { url = "https://maven.quiltmc.org/repository/release/" }
     maven { url = "https://oss.sonatype.org/content/groups/public/" }
 }
 
@@ -22,6 +21,10 @@ dependencies {
     implementation 'net.fabricmc:lorenz-tiny:3.0.0'
     implementation 'net.fabricmc:tiny-remapper:0.5.0:fat'
     implementation 'net.fabricmc:stitch:0.6.1'
+    implementation 'net.fabricmc:access-widener:1.1.0'
+    implementation 'org.zeroturnaround:zt-zip:1.14'
+    implementation 'com.google.guava:guava:30.1.1-jre'
+    implementation 'commons-io:commons-io:2.11.0'
 }
 
 shadowJar {
