--- a/build.gradle
+++ b/build.gradle
@@ -15,16 +15,13 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib"
-    implementation 'org.cadixdev:lorenz:0.5.7'
-    implementation 'org.cadixdev:lorenz-io-proguard:0.5.7'
-    implementation 'net.fabricmc:lorenz-tiny:3.0.0'
     implementation 'net.fabricmc:tiny-remapper:0.5.0:fat'
-    implementation 'net.fabricmc:stitch:0.6.1'
     implementation 'net.fabricmc:access-widener:1.1.0'
     implementation 'org.zeroturnaround:zt-zip:1.14'
     implementation 'com.google.guava:guava:30.1.1-jre'
     implementation 'commons-io:commons-io:2.11.0'
+
+    implementation fileTree(dir: 'libs', include: 'mappings-generator.jar')
 }
 
 shadowJar {
