--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,13 @@ repositories {
 
 dependencies {
     implementation 'net.fabricmc:tiny-remapper:0.5.0:fat'
-    implementation 'net.fabricmc:access-widener:1.1.0'
+    implementation 'net.fabricmc:access-widener:2.1.0'
     implementation 'org.zeroturnaround:zt-zip:1.14'
     implementation 'com.google.guava:guava:30.1.1-jre'
     implementation 'commons-io:commons-io:2.11.0'
+    implementation 'net.fabricmc:fabric-loader:0.13.2'
 
-    implementation fileTree(dir: 'libs', include: 'mappings-generator.jar')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
 
 shadowJar {
